--- a/geppetto/Views/Components/ActivityCardTableViewCell.xib
+++ b/geppetto/Views/Components/ActivityCardTableViewCell.xib
@@ -20,7 +20,7 @@
                 <subviews>
                     <view contentMode="scaleToFill" id="Edl-Bf-iy0" customClass="ActivityCard" customModule="geppetto" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="594" height="182"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                 </subviews>
